[package]
name = "batch_renderer_2_d"
version = "0.1.0"
authors = ["Rosca Alex <roscaalex19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.35.0"
gl = "0.14.0"
rand = "0.7.3"
image = "0.22.5"
itertools = "0.8.2"
specs = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
rlua = "0.17.0"
rlua_serde = "0.4.0"
nalgebra-glm = "0.4.0"
nalgebra = "0.18.0"
ncollide3d = "0.19.2"
nphysics3d = "0.11.1"
num-traits = "0.2.11"
noise = "0.6.0"