[package]
name = "meinkraft"
version = "0.1.0"
authors = ["Rosca Alex <roscaalex19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1

[dependencies]
glfw = "0.35.0"
gl = "0.14.0"
rand = "0.7.3"
image = "0.22.5"
itertools = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
nalgebra-glm = "0.4.0"
nalgebra = "0.18.0"
ncollide3d = "0.19.2"
nphysics3d = "0.11.1"
num-traits = "0.2.11"
noise = "0.6.0"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
bit-vec = "0.6.2"